<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_skins"
        android:icon="@drawable/ic_view_24"
        android:title="@string/tab_skins" />
    <item
        android:id="@+id/nav_stickers"
        android:icon="@drawable/ic_gallery_24"
        android:title="@string/tab_stickers" />
    <item
        android:id="@+id/nav_highlights"
        android:icon="@drawable/ic_play_24"
        android:title="@string/tab_highlights" />
    <item
        android:id="@+id/nav_crates"
        android:icon="@drawable/ic_agenda_24"
        android:title="@string/tab_crates" />
    <item
        android:id="@+id/nav_agents"
        android:icon="@drawable/ic_person_24"
        android:title="@string/tab_agents" />
</menu>
